src/zenoh_ffi.h

// ============================================================================
// Forward declarations
// ============================================================================
typedef struct ZenohSession ZenohSession;
typedef struct ZenohPublisher ZenohPublisher;
typedef struct ZenohSubscriber ZenohSubscriber;
typedef struct ZenohQueryable ZenohQueryable;
// ============================================================================
// Enums - Priority and Congestion Control
// ============================================================================

typedef enum {
  ZENOH_PRIORITY_REAL_TIME = 1,
  ZENOH_PRIORITY_INTERACTIVE_HIGH = 2,
  ZENOH_PRIORITY_INTERACTIVE_LOW = 3,
  ZENOH_PRIORITY_DATA_HIGH = 4,
  ZENOH_PRIORITY_DATA = 5,
  ZENOH_PRIORITY_DATA_LOW = 6,
  ZENOH_PRIORITY_BACKGROUND = 7
} ZenohPriority;
typedef enum {
  ZENOH_CONGESTION_CONTROL_BLOCK = 0,
  ZENOH_CONGESTION_CONTROL_DROP = 1,
  ZENOH_CONGESTION_CONTROL_DROP_FIRST = 2
} ZenohCongestionControl;
// ============================================================================
// Encoding Types
// ============================================================================

typedef enum {
  ZENOH_ENCODING_EMPTY = 0,
  ZENOH_ENCODING_BYTES = 1,
  ZENOH_ENCODING_STRING = 2,
  ZENOH_ENCODING_JSON = 3,
  ZENOH_ENCODING_TEXT_PLAIN = 4,
  ZENOH_ENCODING_TEXT_JSON = 5,
  ZENOH_ENCODING_TEXT_HTML = 6,
  ZENOH_ENCODING_TEXT_XML = 7,
  ZENOH_ENCODING_TEXT_CSS = 8,
  ZENOH_ENCODING_TEXT_CSV = 9,
  ZENOH_ENCODING_TEXT_JAVASCRIPT = 10,
  ZENOH_ENCODING_IMAGE_PNG = 11,
  ZENOH_ENCODING_IMAGE_JPEG = 12,
  ZENOH_ENCODING_IMAGE_GIF = 13,
  ZENOH_ENCODING_IMAGE_BMP = 14,
  ZENOH_ENCODING_IMAGE_WEBP = 15,
  ZENOH_ENCODING_APPLICATION_OCTET_STREAM = 16,
  ZENOH_ENCODING_APPLICATION_JSON = 17,
  ZENOH_ENCODING_APPLICATION_XML = 18,
  ZENOH_ENCODING_APPLICATION_CBOR = 19,
  ZENOH_ENCODING_APPLICATION_YAML = 20,
  ZENOH_ENCODING_APPLICATION_PROTOBUF = 21,
  ZENOH_ENCODING_APPLICATION_CDR = 22,
  ZENOH_ENCODING_CUSTOM = 100
} ZenohEncodingId;
// ============================================================================
// Publisher Options
// ============================================================================

typedef struct {
  ZenohPriority priority;
  ZenohCongestionControl congestion_control;
  ZenohEncodingId encoding;
  const char *encoding_schema;  // Optional schema for encoding
  bool is_express;              // Express mode for low latency
} ZenohPublisherOptions;
// ============================================================================
// Put Options
// ============================================================================

typedef struct {
  ZenohPriority priority;
  ZenohCongestionControl congestion_control;
  ZenohEncodingId encoding;
  const char *encoding_schema;
  const uint8_t *attachment;
  size_t attachment_len;
  bool is_express;
} ZenohPutOptions;
// ============================================================================
// Callback Types
// ============================================================================

// Subscriber callback with extended info
typedef void (*ZenohSubscriberCallback)(const char *key, const uint8_t *value,
                                        size_t len, const char *kind,
                                        const char *attachment, void *context);
// Extended subscriber callback with full sample info
typedef void (*ZenohSubscriberCallbackEx)(
    const char *key, const uint8_t *value, size_t len, int sample_kind,
    int priority, int congestion_control, const char *encoding,
    const uint8_t *attachment, size_t attachment_len, uint64_t timestamp,
    void *context);
typedef void (*ZenohQueryCallback)(const char *key, const char *selector,
                                   const uint8_t *value, size_t len,
                                   const char *kind, void *reply_context,
                                   void *user_context);
// ============================================================================
// Library Management
// ============================================================================

FFI_PLUGIN_EXPORT int zenoh_init_logger(void);
// ============================================================================
// Session Management
// ============================================================================

FFI_PLUGIN_EXPORT ZenohSession *zenoh_open_session(const char *mode,
                                                   const char *endpoint);
FFI_PLUGIN_EXPORT ZenohSession *zenoh_open_session_with_config(
    const char *config_json);
FFI_PLUGIN_EXPORT void zenoh_close_session(ZenohSession *session);
FFI_PLUGIN_EXPORT const char *zenoh_session_info(ZenohSession *session);
// ============================================================================
// Publisher
// ============================================================================

FFI_PLUGIN_EXPORT ZenohPublisher *zenoh_declare_publisher(ZenohSession *session,
                                                          const char *key);
FFI_PLUGIN_EXPORT ZenohPublisher *zenoh_declare_publisher_with_options(
    ZenohSession *session, const char *key, ZenohPublisherOptions *options);
FFI_PLUGIN_EXPORT int zenoh_publisher_put(ZenohPublisher *publisher,
                                          const uint8_t *data, size_t len);
FFI_PLUGIN_EXPORT int zenoh_publisher_put_with_options(ZenohPublisher *publisher,
                                                       const uint8_t *data,
                                                       size_t len,
                                                       ZenohPutOptions *options);
FFI_PLUGIN_EXPORT int zenoh_publisher_delete(ZenohPublisher *publisher);
FFI_PLUGIN_EXPORT void zenoh_undeclare_publisher(ZenohPublisher *publisher);
// ============================================================================
// Subscriber
// ============================================================================

FFI_PLUGIN_EXPORT ZenohSubscriber *
zenoh_declare_subscriber(ZenohSession *session, const char *key,
                         ZenohSubscriberCallback callback, void *context);
FFI_PLUGIN_EXPORT ZenohSubscriber *zenoh_declare_subscriber_ex(
    ZenohSession *session, const char *key, ZenohSubscriberCallbackEx callback,
    void *context);
FFI_PLUGIN_EXPORT void zenoh_undeclare_subscriber(ZenohSubscriber *subscriber);
// ============================================================================
// Queryable
// ============================================================================

FFI_PLUGIN_EXPORT ZenohQueryable *
zenoh_declare_queryable(ZenohSession *session, const char *key_expr,
                        ZenohQueryCallback callback, void *context);
FFI_PLUGIN_EXPORT void zenoh_undeclare_queryable(ZenohQueryable *queryable);
FFI_PLUGIN_EXPORT void zenoh_query_reply(void *reply_context, const char *key,
                                         const uint8_t *data, size_t len);
// ============================================================================
// Scouting
// ============================================================================

FFI_PLUGIN_EXPORT void zenoh_scout(const char *what, const char *config,
                                   void (*callback)(const char *info));