lib/src/gen/zenoh_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/zenoh_dart.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class ZenohDartBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ZenohDartBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ZenohDartBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// ============================================================================
  /// Library Management
  /// ============================================================================
  int zenoh_init_logger() {
    return _zenoh_init_logger();
  }

  late final _zenoh_init_loggerPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('zenoh_init_logger');
  late final _zenoh_init_logger =
      _zenoh_init_loggerPtr.asFunction<int Function()>();

  /// ============================================================================
  /// Session Management
  /// ============================================================================
  ffi.Pointer<ZenohSession> zenoh_open_session(
    ffi.Pointer<ffi.Char> mode,
    ffi.Pointer<ffi.Char> endpoint,
  ) {
    return _zenoh_open_session(
      mode,
      endpoint,
    );
  }

  late final _zenoh_open_sessionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohSession> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('zenoh_open_session');
  late final _zenoh_open_session = _zenoh_open_sessionPtr.asFunction<
      ffi.Pointer<ZenohSession> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ZenohSession> zenoh_open_session_with_config(
    ffi.Pointer<ffi.Char> config_json,
  ) {
    return _zenoh_open_session_with_config(
      config_json,
    );
  }

  late final _zenoh_open_session_with_configPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohSession> Function(
              ffi.Pointer<ffi.Char>)>>('zenoh_open_session_with_config');
  late final _zenoh_open_session_with_config =
      _zenoh_open_session_with_configPtr.asFunction<
          ffi.Pointer<ZenohSession> Function(ffi.Pointer<ffi.Char>)>();

  void zenoh_close_session(
    ffi.Pointer<ZenohSession> session,
  ) {
    return _zenoh_close_session(
      session,
    );
  }

  late final _zenoh_close_sessionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ZenohSession>)>>(
          'zenoh_close_session');
  late final _zenoh_close_session = _zenoh_close_sessionPtr
      .asFunction<void Function(ffi.Pointer<ZenohSession>)>();

  ffi.Pointer<ffi.Char> zenoh_session_info(
    ffi.Pointer<ZenohSession> session,
  ) {
    return _zenoh_session_info(
      session,
    );
  }

  late final _zenoh_session_infoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ZenohSession>)>>('zenoh_session_info');
  late final _zenoh_session_info = _zenoh_session_infoPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ZenohSession>)>();

  /// ============================================================================
  /// Publisher
  /// ============================================================================
  ffi.Pointer<ZenohPublisher> zenoh_declare_publisher(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _zenoh_declare_publisher(
      session,
      key,
    );
  }

  late final _zenoh_declare_publisherPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohPublisher> Function(ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>)>>('zenoh_declare_publisher');
  late final _zenoh_declare_publisher = _zenoh_declare_publisherPtr.asFunction<
      ffi.Pointer<ZenohPublisher> Function(
          ffi.Pointer<ZenohSession>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ZenohPublisher> zenoh_declare_publisher_with_options(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ZenohPublisherOptions> options,
  ) {
    return _zenoh_declare_publisher_with_options(
      session,
      key,
      options,
    );
  }

  late final _zenoh_declare_publisher_with_optionsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ZenohPublisher> Function(ffi.Pointer<ZenohSession>,
                  ffi.Pointer<ffi.Char>, ffi.Pointer<ZenohPublisherOptions>)>>(
      'zenoh_declare_publisher_with_options');
  late final _zenoh_declare_publisher_with_options =
      _zenoh_declare_publisher_with_optionsPtr.asFunction<
          ffi.Pointer<ZenohPublisher> Function(ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ZenohPublisherOptions>)>();

  int zenoh_publisher_put(
    ffi.Pointer<ZenohPublisher> publisher,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _zenoh_publisher_put(
      publisher,
      data,
      len,
    );
  }

  late final _zenoh_publisher_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ZenohPublisher>, ffi.Pointer<ffi.Uint8>,
              ffi.Size)>>('zenoh_publisher_put');
  late final _zenoh_publisher_put = _zenoh_publisher_putPtr.asFunction<
      int Function(ffi.Pointer<ZenohPublisher>, ffi.Pointer<ffi.Uint8>, int)>();

  int zenoh_publisher_put_with_options(
    ffi.Pointer<ZenohPublisher> publisher,
    ffi.Pointer<ffi.Uint8> data,
    int len,
    ffi.Pointer<ZenohPutOptions> options,
  ) {
    return _zenoh_publisher_put_with_options(
      publisher,
      data,
      len,
      options,
    );
  }

  late final _zenoh_publisher_put_with_optionsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Pointer<ZenohPublisher>,
                  ffi.Pointer<ffi.Uint8>,
                  ffi.Size,
                  ffi.Pointer<ZenohPutOptions>)>>(
      'zenoh_publisher_put_with_options');
  late final _zenoh_publisher_put_with_options =
      _zenoh_publisher_put_with_optionsPtr.asFunction<
          int Function(ffi.Pointer<ZenohPublisher>, ffi.Pointer<ffi.Uint8>, int,
              ffi.Pointer<ZenohPutOptions>)>();

  int zenoh_publisher_delete(
    ffi.Pointer<ZenohPublisher> publisher,
  ) {
    return _zenoh_publisher_delete(
      publisher,
    );
  }

  late final _zenoh_publisher_deletePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ZenohPublisher>)>>(
      'zenoh_publisher_delete');
  late final _zenoh_publisher_delete = _zenoh_publisher_deletePtr
      .asFunction<int Function(ffi.Pointer<ZenohPublisher>)>();

  void zenoh_undeclare_publisher(
    ffi.Pointer<ZenohPublisher> publisher,
  ) {
    return _zenoh_undeclare_publisher(
      publisher,
    );
  }

  late final _zenoh_undeclare_publisherPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ZenohPublisher>)>>(
      'zenoh_undeclare_publisher');
  late final _zenoh_undeclare_publisher = _zenoh_undeclare_publisherPtr
      .asFunction<void Function(ffi.Pointer<ZenohPublisher>)>();

  /// ============================================================================
  /// Subscriber
  /// ============================================================================
  ffi.Pointer<ZenohSubscriber> zenoh_declare_subscriber(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
    ZenohSubscriberCallback callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _zenoh_declare_subscriber(
      session,
      key,
      callback,
      context,
    );
  }

  late final _zenoh_declare_subscriberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohSubscriber> Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohSubscriberCallback,
              ffi.Pointer<ffi.Void>)>>('zenoh_declare_subscriber');
  late final _zenoh_declare_subscriber =
      _zenoh_declare_subscriberPtr.asFunction<
          ffi.Pointer<ZenohSubscriber> Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohSubscriberCallback,
              ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ZenohSubscriber> zenoh_declare_subscriber_ex(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key,
    ZenohSubscriberCallbackEx callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _zenoh_declare_subscriber_ex(
      session,
      key,
      callback,
      context,
    );
  }

  late final _zenoh_declare_subscriber_exPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohSubscriber> Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohSubscriberCallbackEx,
              ffi.Pointer<ffi.Void>)>>('zenoh_declare_subscriber_ex');
  late final _zenoh_declare_subscriber_ex =
      _zenoh_declare_subscriber_exPtr.asFunction<
          ffi.Pointer<ZenohSubscriber> Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohSubscriberCallbackEx,
              ffi.Pointer<ffi.Void>)>();

  void zenoh_undeclare_subscriber(
    ffi.Pointer<ZenohSubscriber> subscriber,
  ) {
    return _zenoh_undeclare_subscriber(
      subscriber,
    );
  }

  late final _zenoh_undeclare_subscriberPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ZenohSubscriber>)>>(
      'zenoh_undeclare_subscriber');
  late final _zenoh_undeclare_subscriber = _zenoh_undeclare_subscriberPtr
      .asFunction<void Function(ffi.Pointer<ZenohSubscriber>)>();

  /// ============================================================================
  /// Queryable
  /// ============================================================================
  ffi.Pointer<ZenohQueryable> zenoh_declare_queryable(
    ffi.Pointer<ZenohSession> session,
    ffi.Pointer<ffi.Char> key_expr,
    ZenohQueryCallback callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _zenoh_declare_queryable(
      session,
      key_expr,
      callback,
      context,
    );
  }

  late final _zenoh_declare_queryablePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ZenohQueryable> Function(
              ffi.Pointer<ZenohSession>,
              ffi.Pointer<ffi.Char>,
              ZenohQueryCallback,
              ffi.Pointer<ffi.Void>)>>('zenoh_declare_queryable');
  late final _zenoh_declare_queryable = _zenoh_declare_queryablePtr.asFunction<
      ffi.Pointer<ZenohQueryable> Function(ffi.Pointer<ZenohSession>,
          ffi.Pointer<ffi.Char>, ZenohQueryCallback, ffi.Pointer<ffi.Void>)>();

  void zenoh_undeclare_queryable(
    ffi.Pointer<ZenohQueryable> queryable,
  ) {
    return _zenoh_undeclare_queryable(
      queryable,
    );
  }

  late final _zenoh_undeclare_queryablePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ZenohQueryable>)>>(
      'zenoh_undeclare_queryable');
  late final _zenoh_undeclare_queryable = _zenoh_undeclare_queryablePtr
      .asFunction<void Function(ffi.Pointer<ZenohQueryable>)>();

  void zenoh_query_reply(
    ffi.Pointer<ffi.Void> reply_context,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _zenoh_query_reply(
      reply_context,
      key,
      data,
      len,
    );
  }
